syntax = "proto3";
package io.hbt.bubblegum.core.kademlia.protobuf;

message KademliaFindRequest {
    string searchHash = 1;
    int32 numberRequested = 2;
    bool returnValue = 3;
}