syntax = "proto3";
package io.hbt.bubblegum.core.kademlia.protobuf;

message KademliaNode {
    string hash = 1;
    string ipAddress = 2;
    int32 port = 3;
}