syntax = "proto3";
package io.hbt.bubblegum.core.kademlia.protobuf;

import "BgKademliaFindRequest.proto";

message KademliaFindValueResponse {
    KademliaFindRequest request = 1;
    bytes value = 2;
}